Desquish Beleth.  Fix link to the archive.

--- a/forbiddenflora_com/assets/scss/forbiddenflora.scss
+++ b/forbiddenflora_com/assets/scss/forbiddenflora.scss
@@ -14,6 +14,9 @@ body {
 	position: relative;
 	padding-top: 1em;
 
+	> * {
+		@include flex(none);
+	}
 	.forflor-header--left {
 		margin-right: -20px;
 	}
